# prism

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  SPEC.md  VISUAL_GRAMMAR.md  package-lock.json  package.json  pyproject.toml
examples/: README.md  ai-judgment-commoditization.html  ai-judgment-commoditization.yaml  btc-halving.html  btc-halving.yaml  china-financial-market-framework.html  china-financial-market-framework.yaml  fed_rate_hike.html  fed_rate_hike.yaml  fed_rate_hike_generated.html  fed_rate_hike_generated.yaml  prism-hierarchical-framework.yaml  prism-workflow.html  prism-workflow.yaml  stablecoin-interest-parallel-lanes.html  stablecoin-interest-parallel-lanes.yaml  stablecoin-interest-v2.html  stablecoin-interest-v2.yaml  stablecoin-interest.html  stablecoin-interest.yaml  stablecoin-revenue.html  stablecoin-revenue.yaml  treasury.html  treasury.yaml  us-treasury.html  us-treasury.yaml
prism/: __init__.py
prism/compression/: base.py
prism/core/: __init__.py  models.py  validator.py
prism/ontologies/: financial.yaml  loader.py
prism/render/: __init__.py  base.py
prism/research/: base.py  interview.py  perspectives.py
src/prism/: cli.py
src/prism/compression/: __init__.py  compressor.py  llm_compressor.py
src/prism/core/: models.py  schema.py  validator.py
src/prism/ontologies/: __init__.py  architecture.yaml  crypto.yaml  financial.yaml  (+3 more)
tests/: test_cli.py  test_llm_compressor.py  test_render_dagre.py  test_render_mermaid.py  test_render_parallel_lanes.py  test_render_visual_grammar.py  test_schema.py  test_validator.py
(+18 files in other folders)
