[project]
name = "prism"
version = "0.1.0"
description = "A visual explanation system built around portable prism.yaml documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
prism = "prism.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/prism",
    "/examples",
    "/tests",
    "/README.md",
    "/SPEC.md",
    "/AGENTS.md",
    "/CLAUDE.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
